--- a/docs/imports/Makefile.am
+++ b/docs/imports/Makefile.am
@@ -1,8 +1,8 @@
 # BEAST & BSE
 include $(top_srcdir)/Makefile.decl
 
-MANMANS	    = bse.5 bsescm.1 bsewavetool.1 sfidl.1
-HTMLMANS    = bse.5.html bsescm.1.html bsewavetool.1.html sfidl.1.html
+MANMANS	    = bsescm.1 bsewavetool.1 sfidl.1
+HTMLMANS    = bsescm.1.html bsewavetool.1.html sfidl.1.html
 EXTRA_DIST += $(MANMANS)
 # HTMLMANS are packaged as part of the doxygen docs
 
