EBEAST: export ELECTRON_ENABLE_LOGGING to catch build error resons
See also https://github.com/electron/electron/issues/8757

Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/v8bse/Makefile.am
+++ b/ebeast/v8bse/Makefile.am
@@ -5,6 +5,8 @@ AM_CXXFLAGS  += $(BSE_CFLAGS) $(RAPICORN_CFLAGS) -DRAPICORN_CONVENIENCE -DG_DISA
 AIDACC_VDEBUG = $(AIDACC) $(if $(findstring 1, $(V)), --aida-debug)
 CLEANDIRS     =
 
+export ELECTRON_ENABLE_LOGGING=1
+
 # == all: ==
 all:
 	@echo "$$(basename $$(pwd))/: build via ../ebeast/ rules"
