--- a/ebeast/package.json.in
+++ b/ebeast/package.json.in
@@ -4,9 +4,16 @@
   "description":     "Beast - Music Synthesizer and Composer",
   "main":            "main.js",
   "dependencies":    { "electron": "^1.4.15", "mithril": "^1.0.1",
+		       "vue": "^2.2.6",
 		       "jquery": "^3.1.1", "font-awesome": "^4.7.0" },
   "devDependencies": { "node-gyp": "^3.5.0", "less": "^2.7.2",
 		       "electron-packager": "^8.6.0",
+		       "browserify": "^14.1.0",
+		       "vueify": "^9.4.1",
+		       "babel-core": "^6.8.0",
+		       "babel-preset-es2015": "^6.6.0",
+		       "babel-plugin-transform-runtime": "^6.23.0",
+		       "babelify": "^7.3.0",
 		       "eslint": "^3.16.1", "eslint-plugin-html": "^2.0.1" },
   "license":         "LGPL-2.1+",
   "scripts": {
