--- a/ebeast/Makefile.am
+++ b/ebeast/Makefile.am
@@ -75,11 +75,13 @@ objects/vue-components.html: $(VUE_COMPONENTS_INPUTS) Makefile
 
 # == app ==
 app: .appstamp
-.appstamp: package.json xlint-html xlint-js
+.appstamp: package.json xlint-html xlint-js v8bse/v8bse.node
 .appstamp: objects/app.css objects/gradient-01.png objects/vc-bundle.js objects/vue-components.html
-	$(Q) $(MAKE) $(AM_MAKEFLAGS) -C v8bse v8bse.node
 	$(Q) rm -rf .bundlestamp "./$(BUNDLEDIR)" # avoid electron picking up stale resources
 	$(Q) touch $@
+v8bse/v8bse.node:
+	$(Q) $(MAKE) $(AM_MAKEFLAGS) -C v8bse v8bse.node
+v8bse/v8bse.node: v8bse/*.cc v8bse/*.py v8bse/*.gyp v8bse/*.am
 MOSTLYCLEANFILES += .appstamp
 
 # == run ==
