SPECTMORPH: build gui subdir
Signed-off-by: Stefan Westerfeld <stefan@space.twc.de>

--- a/plugins/spectmorph/Makefile.am
+++ b/plugins/spectmorph/Makefile.am
@@ -1,6 +1,8 @@
 # BEAST & BSE
 include $(top_srcdir)/Makefile.decl
 
+SUBDIRS = gui
+
 AM_CPPFLAGS += -I$(top_srcdir) -I.
 DEFS        += @DEFINE__FILE_DIR__@ -DG_LOG_DOMAIN="\"$(strip $(basename $(<F)))\""
 AM_CXXFLAGS += $(SPECTMORPH_CFLAGS) $(BSE_CFLAGS) $(RAPICORN_CFLAGS) -DBSE_CONVENIENCE -DQT_NO_EMIT
