BUILD: added spectmorph gui Makefile
Signed-off-by: Stefan Westerfeld <stefan@space.twc.de>

--- a/configure.ac
+++ b/configure.ac
@@ -752,6 +752,7 @@ plugins/Makefile
 plugins/icons/Makefile
 plugins/freeverb/Makefile
 plugins/spectmorph/Makefile
+plugins/spectmorph/gui/Makefile
 drivers/Makefile
 beast-gtk/Makefile
 beast-gtk/gxk/Makefile
