BUILD: added spectmorph gui Makefile
Signed-off-by: Stefan Westerfeld <stefan@space.twc.de>

--- a/configure.ac
+++ b/configure.ac
@@ -733,6 +733,7 @@ plugins/Makefile
 plugins/icons/Makefile
 plugins/freeverb/Makefile
 plugins/spectmorph/Makefile
+plugins/spectmorph/gui/Makefile
 drivers/Makefile
 shell/Makefile
 pybeast/Makefile
