BUILD: move binaries and locale files into Beast <package> dir
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/configure.ac
+++ b/configure.ac
@@ -80,6 +80,8 @@ test "$TEST_SRCDIR" == "$TEST_BUILDDIR" || {
 }
 
 # Define package directories per major/minor version
+localedir="\${beastdir}/locale"
+bindir="\${beastdir}/bin"
 bseincludedir="\${beastdir}/include"
 bselibdir="\${beastdir}/lib"
 datadir="\${beastdir}"
