BUILD: move library and data files into Beast <package> dir
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/configure.ac
+++ b/configure.ac
@@ -80,34 +80,37 @@ test "$TEST_SRCDIR" == "$TEST_BUILDDIR" || {
 }
 
 # Define package directories per major/minor version
+syslibdir="$libdir"		# since we redirect libdir, save its original value as syslibdir
 localedir="\${beastdir}/locale"
 bindir="\${beastdir}/bin"
-bseincludedir="\${beastdir}/include"
+libdir="\${beastdir}/lib"
 bselibdir="\${beastdir}/lib"
-datadir="\${beastdir}"
+datarootdir="\${beastdir}"
+datadir="\${datarootdir}"
 docdir="\${beastdir}/doc"
+bseincludedir="\${beastdir}/include"
 # Provide directories for C++ and move Beast packagedir into libdir if under /usr
 bak_prefix="$prefix"; bak_exec_prefix="$exec_prefix"
 test "x$prefix" != xNONE || prefix="$ac_default_prefix" ; test "x$exec_prefix" != xNONE || exec_prefix="$prefix"
 case `eval echo "${exec_prefix}"` in
-  /usr|/usr/local)	beastdir="\${libdir}/beast-$MAJOR-$MINOR" ;;
+  /usr|/usr/local)	beastdir="$syslibdir/beast-$MAJOR-$MINOR" ;;
   *)            	beastdir="\${exec_prefix}/beast-$MAJOR-$MINOR" ;;
 esac
-bak_libdir="$libdir"; bak_datarootdir="$datarootdir"; bak_datadir="$datadir"
+bak_libdir="$libdir"; bak_syslibdir="$syslibdir"; bak_datarootdir="$datarootdir"; bak_datadir="$datadir"
 bak_bseincludedir="$bseincludedir"; bak_beastdir="$beastdir"
-libdir=`eval echo "${libdir}"`; datarootdir=`eval echo "${datarootdir}"`; datadir=`eval echo "${datadir}"`
+libdir=`eval echo "${libdir}"`; syslibdir=`eval echo "${syslibdir}"`; datarootdir=`eval echo "${datarootdir}"`; datadir=`eval echo "${datadir}"`
 bseincludedir=`eval echo "${bseincludedir}"`; beastdir=`eval echo "${beastdir}"`
 AC_DEFINE_UNQUOTED(CONFIGURE_INSTALLPATH_BEASTDIR, ["`eval echo "${beastdir}"`"], [Beast program directory])
 AC_DEFINE_UNQUOTED(CONFIGURE_INSTALLPATH_BSEINCLUDEDIR, ["`eval echo "${bseincludedir}"`"], [Directory for libbse header files])
 AC_DEFINE_UNQUOTED(CONFIGURE_INSTALLPATH_BINDIR, ["`eval echo "${bindir}"`"], [Directory to install and execute programs])
 AC_DEFINE_UNQUOTED(CONFIGURE_INSTALLPATH_LOCALEBASE, ["`eval echo ${localedir}`"], [Base directory for locale specific message catalogs])
-AC_DEFINE_UNQUOTED(CONFIGURE_INSTALLPATH_LADSPA, ["`eval echo ${libdir}/ladspa`"], [Searchpath for LADSPA plugins])
+AC_DEFINE_UNQUOTED(CONFIGURE_INSTALLPATH_LADSPA, ["`eval echo ${syslibdir}/ladspa`"], [Searchpath for LADSPA plugins])
 AC_DEFINE_UNQUOTED(CONFIGURE_INSTALLPATH_BSELIBDIR, ["`eval echo ${bselibdir}`"], [Directory to install plugins and drivers])
 AC_DEFINE_UNQUOTED(CONFIGURE_INSTALLPATH_DATADIR, ["`eval echo ${datadir}`"], [Directory to install samples, effects, scripts, etc])
 AC_DEFINE_UNQUOTED(CONFIGURE_INSTALLPATH_DOCDIR, ["`eval echo ${docdir}`"], [Directory to install documentation])
 AC_DEFINE_UNQUOTED(CONFIGURE_INSTALLPATH_USER_DATA, ["~/beast"], [Searchpath for user owned Beast resources])
 bseincludedir="$bak_bseincludedir"; beastdir="$bak_beastdir"
-libdir="$bak_libdir"; datarootdir="$bak_datarootdir"; datadir="$bak_datadir"
+libdir="$bak_libdir"; syslibdir="$bak_syslibdir"; datarootdir="$bak_datarootdir"; datadir="$bak_datadir"
 prefix="$bak_prefix"; exec_prefix="$bak_exec_prefix"
 # Substitute directories in Makefiles
 AC_SUBST(bseincludedir)
@@ -115,6 +118,7 @@ AC_SUBST(bselibdir)
 AC_SUBST(datadir)
 AC_SUBST(docdir)
 AC_SUBST(beastdir)
+AC_SUBST(syslibdir)
 
 # == Check for git ==
 AC_MSG_CHECKING([for git repository])
